SERVER-13208: dropDups should be ignored for index comparison